<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_container_vehicle_info"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorBottomSheet"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <TextView
        android:id="@+id/tv_route_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/text_view_route_number"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    
    <ImageView
        android:id="@+id/iv_transport_icon"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/ic_tram_gray_24_dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_route_number"/>

    <ImageView
        android:id="@+id/iv_favorite_icon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="36dp"
        android:src="@drawable/ic_favorite_gray_24_dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_route_number"
        app:layout_constraintBottom_toTopOf="@+id/iv_transport_icon"/>

    <TextView
        android:id="@+id/tv_transport_type_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="4dp"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_route_number"
        app:layout_constraintLeft_toRightOf="@+id/iv_transport_icon"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="4dp"
        android:background="#3a000000"
        app:layout_constraintBottom_toTopOf="@+id/tv_transport_speed"/>

    <TextView
        android:id="@+id/tv_transport_speed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/text_view_speed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_transport_type_value"/>

    <TextView
        android:id="@+id/tv_transport_speed_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:gravity="end"
        app:layout_constraintBottom_toBottomOf="@+id/tv_transport_speed"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/tv_transport_inventory_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/text_view_number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_transport_speed"/>

    <TextView
        android:id="@+id/tv_transport_inventory_number_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:gravity="end"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_transport_speed_value"/>

    <TextView
        android:id="@+id/tv_transport_capacity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/text_view_capacity"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_transport_inventory_number"/>

    <TextView
        android:id="@+id/tv_transport_capacity_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:gravity="end"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_transport_inventory_number_value"/>

    <TextView
        android:id="@+id/tv_transport_fee"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/text_view_fee"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_transport_capacity"/>

    <TextView
        android:id="@+id/tv_transport_fee_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:gravity="end"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_transport_capacity_value"/>

    <TextView
        android:id="@+id/tv_transport_route_distance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/text_view_distance"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_transport_fee"/>

    <TextView
        android:id="@+id/tv_transport_route_distance_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:gravity="end"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_transport_fee_value"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:background="#3a000000"
        app:layout_constraintTop_toBottomOf="@+id/tv_transport_route_distance"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/tv_transport_route_distance"
        tools:layout_editor_absoluteX="0dp" />

</android.support.constraint.ConstraintLayout>